<resources>
    <string name="app_name">TelecursoXandao</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">Create Account</string>
    <string name="need_help">Need Help?</string>
    <string name="main_title">Tela principal</string>
    <string name="user_name">%1s</string>
    <string name="pass_word">%1s</string>
    <string name="edit_name">Nome</string>
    <string name="edit_year">Ano</string>
    <string name="edit_rating">Nota</string>
    <string name="edit_save">Salvar</string>
</resources>
