<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/praia">

    <ImageView
        app:layout_widthPercent="50%"
        app:layout_heightPercent="50%"
        app:layout_marginTopPercent="5%"
        app:layout_marginLeftPercent="26%"
        android:id="@+id/logo"
        android:src="@drawable/i25231"
        android:tint="#dcdcdc"
        android:alpha="0.78"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_widthPercent="70%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="55%"
        app:layout_marginLeftPercent="15%"
        android:background="@drawable/rounded_edittext">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/image1"
            android:src="@drawable/user"
            android:tint="@android:color/darker_gray"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:id="@+id/editText1"
            android:hint="@string/username"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_widthPercent="70%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="65%"
        app:layout_marginLeftPercent="15%"
        android:background="@drawable/rounded_edittext">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/image2"
            android:src="@drawable/locked"
            android:tint="@android:color/darker_gray"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:id="@+id/editText2"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <Button
        app:layout_widthPercent="70%"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="75%"
        app:layout_marginLeftPercent="15%"
        android:id="@+id/button1"
        android:hint="@string/get_started"
        android:textColorHint="@android:color/white"
        android:textSize="18dp"
        android:background="@drawable/rounded_button"
        />
    <TextView
        app:layout_widthPercent="40%"
        app:layout_heightPercent="6%"
        app:layout_marginTopPercent="90%"
        app:layout_marginLeftPercent="5%"
        android:id="@+id/textview1"
        android:textColor="#ffffff"
        android:text="@string/create_account"
        android:textSize="16dp"
        android:clickable="true"
        />
    <TextView
        app:layout_widthPercent="30%"
        app:layout_heightPercent="6%"
        app:layout_marginTopPercent="90%"
        app:layout_marginLeftPercent="73%"
        android:id="@+id/textview2"
        android:textColor="#ffffff"
        android:text="@string/need_help"
        android:textSize="16dp"
        android:clickable="true"
        />
</android.support.percent.PercentRelativeLayout>
