<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_activity"
    android:background="@drawable/praia">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_widthPercent="70%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="2%"
        app:layout_marginLeftPercent="15%"
        android:background="@drawable/rounded_edittext">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/image1"
            android:src="@drawable/user"
            android:tint="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/user"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textSize="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_widthPercent="98%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="35%"
        app:layout_marginLeftPercent="1%"
        android:background="@drawable/rounded_edittext">
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:hint="@string/edit_name"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_widthPercent="98%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="45%"
        app:layout_marginLeftPercent="1%"
        android:background="@drawable/rounded_edittext">
        <EditText
            android:id="@+id/edit_year"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:hint="@string/edit_year"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_widthPercent="98%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="55%"
        app:layout_marginLeftPercent="1%"
        android:background="@drawable/rounded_edittext">
        <EditText
            android:id="@+id/edit_rating"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:hint="@string/edit_rating"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <Button
        app:layout_widthPercent="50%"
        app:layout_heightPercent="10%"
        app:layout_marginTopPercent="80%"
        app:layout_marginLeftPercent="25%"
        android:id="@+id/buttonEdit1"
        android:text="@string/edit_save"
        android:textColorHint="@android:color/white"
        android:textSize="37dp"
        android:background="@drawable/selector_getstarted"/>
</android.support.percent.PercentRelativeLayout>